Launcher3: add toggle for desktop and drawer labels
Squashed with:

Author: razorloves <razorloves@gmail.com>
Date:   Wed Jan 8 23:53:25 2020 -0600

    Trebuchet: Fix missing icon labels in folders

    Fixes regression introduced in 186796e.

    Change-Id: I1e6054fe84ea54bf2a85bf6d26760196ffe78f69

Change-Id: I98063b7adaf22029c4bfa50d2cac730f3612e121
Signed-off-by: Joey <joey@lineageos.org>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -82,4 +82,8 @@
     <string name="allow_swipe_down_clearall_title">Swipe down to clear all recents</string>
     <string name="allow_swipe_down_clearall_desc">Enable to clear all recents in the overview screen by swiping down</string>
 
+    <!-- Hide labels -->
+    <string name="desktop_show_labels">Show icon labels on desktop</string>
+    <string name="drawer_show_labels">Show icon labels in drawer</string>
+
 </resources>
