--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -41,6 +41,18 @@
             android:targetClass="com.android.launcher3.settings.SettingsHomescreen" />
     </Preference>
 
+    <SwitchPreference
+        android:key="pref_desktop_show_labels"
+        android:title="@string/desktop_show_labels"
+        android:defaultValue="true"
+        android:persistent="true" />
+
+    <SwitchPreference
+        android:key="pref_drawer_show_labels"
+        android:title="@string/drawer_show_labels"
+        android:defaultValue="true"
+        android:persistent="true" />
+
     <Preference
         android:key="app_drawer"
         android:title="@string/app_drawer_category_title"
