Launcher3: Introduce Quickspace [squashed]
Implements a date/time and weather view on the first page of the
homescreen similar to Google's Smartspace.

This completely replaces the legacy QSB with our view and uses an open
source WeatherProvider client to retrieve weather information

Bootleggers edit: Let's make it toggleable, by moving our showQSB into showQuickspace, using At a Glance strings.

AICP Edit: adapted to OmniJaws weather provider

includes
* c004066d8 - Launcher3: quickspace fixes <Ali B>
* 8d281abcb - QuickSpace: refactor weather integration  <Ali B>
* 4572b7a7e - Quickspace: properly handle weather updates <Ali B>
* 0769a31ac - Quickspace: Create action receivers for date/weather view <Chris>
* d7fad74e6 - Launcher3: Introduce Quickspace <Chris>

Change-Id: Iac9c8099007f790322342e23b5911fc2ecf808ea
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -58,4 +58,8 @@
     <string name="msg_minus_one_on_right">When you swipe right from main Home screen</string>
     <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
 
+    <!-- QuickSpace -->
+    <string name="show_quickspace_title">At A Glance</string>
+    <string name="show_quickspace_summary">Show at the top of your Home screen</string>
+    <string name="abbrev_wday_month_day_no_year" translatable="false">EEEEMMMd</string>
 </resources>
