Launcher3: Add alternate Quickspace layout
just for the funnies

Change-Id: I8796033593d0b7e28cea4bfb8c6f5e3b1a432ee4
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -74,6 +74,10 @@
     <string name="quickspace_now_playing_title">Show now playing</string>
     <string name="quickspace_now_playing_summary">Shows the song you\'re playing on At a Glance.</string>
 
+    <!-- Quickspace alternative view -->
+    <string name="quickspace_alternate_style_title">Use an alternative style</string>
+    <string name="quickspace_alternate_style_summary">Use a minimalistic style for At a Glance</string>
+
     <string name="state_loading">Applying\u2026</string>
 
     <!-- Gestures -->
