Quickspace: Toggle the Now Playing status
As it's a bit uncompatible and unreliable compared to other methods, let's disable it by default.
Works fine at least on my apps

Change-Id: Ibacd3d2642cbcdd8febffa9168d2d5578564e5af

--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -27,4 +27,12 @@
         android:defaultValue="true"
         android:persistent="true"/>
 
+    <SwitchPreference
+        android:dependency="pref_show_quickspace"
+        android:key="pref_quickspace_np"
+        android:summary="@string/quickspace_now_playing_summary"
+        android:title="@string/quickspace_now_playing_title"
+        android:defaultValue="true"
+        android:persistent="true" />
+
 </androidx.preference.PreferenceScreen>
