--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -70,4 +70,7 @@
     <string name="quick_event_ambient_now_playing">Now Playing</string>
     <string name="quick_event_ambient_song_artist">%1$s by %2$s</string>
 
+    <!-- Quickspace Now Playing -->
+    <string name="quickspace_now_playing_title">Show now playing</string>
+    <string name="quickspace_now_playing_summary">Shows the song you\'re playing on At a Glance.</string>
 </resources>
