--- a/res/xml/launcher_home_screen_preferences.xml
+++ b/res/xml/launcher_home_screen_preferences.xml
@@ -37,6 +37,14 @@
 
     <SwitchPreference
         android:dependency="pref_show_quickspace"
+        android:key="pref_quickspace_psonality"
+        android:summary="@string/quickspace_psa_summary"
+        android:title="@string/quickspace_psa_title"
+        android:defaultValue="true"
+        android:persistent="true" />
+
+    <SwitchPreference
+        android:dependency="pref_show_quickspace"
         android:key="pref_quickspace_np"
         android:summary="@string/quickspace_now_playing_summary"
         android:title="@string/quickspace_now_playing_title"
