Launcher3: Add toggle for gestures
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: Joker-V2 <nipinna0@gmail.com>
Change-Id: I5dfc5384708ea6f98a4d3ebb5f347208a5cc6fb7
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -75,4 +75,8 @@
     <string name="quickspace_now_playing_summary">Shows the song you\'re playing on At a Glance.</string>
 
     <string name="state_loading">Applying\u2026</string>
+
+    <!-- Gestures -->
+    <string name="pref_dt_gesture_title">Double tap gesture</string>
+    <string name="pref_dt_gesture_summary">Double tap on empty space for screen-off</string>
 </resources>
