--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -65,4 +65,11 @@
             android:targetClass="com.android.launcher3.settings.SettingsMisc" />
     </Preference>
 
+    <SwitchPreference
+	android:key="pref_dt_gesture"
+        android:title="@string/pref_dt_gesture_title"
+        android:summary="@string/pref_dt_gesture_summary"
+        android:defaultValue="true"
+	android:persistent="true"/>
+
 </androidx.preference.PreferenceScreen>
