Add restart action
Change-Id: I562ef0baead993a0b1e2881a399ea97a98513f3f
Signed-off-by: DennySPb <dennyspb@gmail.com>
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -73,4 +73,6 @@
     <!-- Quickspace Now Playing -->
     <string name="quickspace_now_playing_title">Show now playing</string>
     <string name="quickspace_now_playing_summary">Shows the song you\'re playing on At a Glance.</string>
+
+    <string name="state_loading">Applying\u2026</string>
 </resources>
