--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -50,4 +50,12 @@
     <string name="overview_blur_radius_title">Overview blur radius</string>
     <string name="overview_blur_radius_summary">Make the background transparent or fully opaque</string>
 
+    <!-- Settings title to show Google Now at -1 screen on launcher. [CHAR LIMIT=50] -->
+    <string name="title_show_google_app">Show Google App</string>
+    <!-- Settings message explaining when the -1 screen is available on an LTR device. [CHAR LIMIT=100] -->
+    <string name="msg_minus_one_on_left">When you swipe left from main Home screen</string>
+    <!-- Settings message explaining when the -1 screen is available on an RTL device. [CHAR LIMIT=100] -->
+    <string name="msg_minus_one_on_right">When you swipe right from main Home screen</string>
+    <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
+
 </resources>
