--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -79,4 +79,7 @@
     <!-- Gestures -->
     <string name="pref_dt_gesture_title">Double tap gesture</string>
     <string name="pref_dt_gesture_summary">Double tap on empty space for screen-off</string>
+    <string name="allow_swipe_down_clearall_title">Swipe down to clear all recents</string>
+    <string name="allow_swipe_down_clearall_desc">Enable to clear all recents in the overview screen by swiping down</string>
+
 </resources>
