Launcher3: Allow to tweak blur radius on all apps and on overview
Change-Id: I724cf8eeab40c915009b36f030b0a79788f749e2

--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -42,4 +42,12 @@
     <string name="suggestion_pref_screen_title">Suggestions</string>
     <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
 
+    <!-- Blur radius -->
+    <string name="enable_blur_title">Enable blur</string>
+    <string name="enable_blur_summary">Make the background go out of focus</string>
+    <string name="all_apps_blur_radius_title">All apps blur radius</string>
+    <string name="all_apps_blur_radius_summary">Make the background transparent or fully opaque</string>
+    <string name="overview_blur_radius_title">Overview blur radius</string>
+    <string name="overview_blur_radius_summary">Make the background transparent or fully opaque</string>
+
 </resources>
