--- a/res/xml/launcher_app_drawer_preferences.xml
+++ b/res/xml/launcher_app_drawer_preferences.xml
@@ -12,6 +12,24 @@
         settings:units="%"
         android:defaultValue="100" />
 
+    <SwitchPreference
+        android:key="pref_allow_all_apps_blur"
+        android:title="@string/enable_blur_title"
+        android:summary="@string/enable_blur_summary"
+        android:defaultValue="false"
+        android:persistent="true" />
+
+    <com.android.launcher3.settings.preferences.CustomSeekBarPreference
+        android:key="pref_all_apps_scrim_blur"
+        android:title="@string/all_apps_blur_radius_title"
+        android:summary="@string/all_apps_blur_radius_summary"
+        android:dependency="pref_allow_all_apps_blur"
+        android:persistent="true"
+        android:max="175"
+        android:min="30"
+        settings:units="px"
+        android:defaultValue="75" />
+
     <androidx.preference.PreferenceScreen
         android:persistent="false"
         android:title="@string/suggestion_pref_screen_title"
