--- a/res/values/awaken_strings.xml
+++ b/res/values/awaken_strings.xml
@@ -64,7 +64,7 @@
     <string name="abbrev_wday_month_day_no_year" translatable="false">EEEEMMMd</string>
 
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
-    <string name="quick_event_rom_intro_welcome">Welcome to Bootleggers</string>
+    <string name="quick_event_rom_intro_welcome">Welcome to Project-Awaken</string>
     <string-array translatable="false" name="welcome_message_variants">
         <item>Have a great day</item>
         <item>Thank you for choosing us</item>
@@ -73,6 +73,21 @@
         <item>Say hi to us on Telegram</item>
         <item>Tap here to begin</item>
         <item>We love you 3000</item>
+        <item>How is everything going?</item>
+        <item>No illusions, welcome to reality!</item>
+        <item>Thank you for your support</item>
+        <item>No festival for Derps - only perfection!</item>
+        <item>One of the buildbot\'s best picks</item>
+        <item>Sanity for your Paranoia</item>
+        <item>Try Ice Cold desserts</item>
+        <item>What a lovely experience, isn\'t it?</item>
+        <item>Evolution is a myth, right?</item>
+        <item>You are what you flash, don\'t be Potato</item>
+        <item>What\'s on your mind?</item>
+        <item>Winner Winner ....?</item>
+        <item>Have fun!</item>
+        <item>Time for some good music</item>
+        <item>Is it time to flash another update already?</item>
     </string-array>
 
     <!-- QuickSpace: QuickEvent: Ambient Play -->
